--- a/v2/how-elderella-works.html
+++ b/v2/how-elderella-works.html
@@ -14,8 +14,150 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        /* Remove drop shadows from product images on this page */
+        .page-how-elderella-works .step-graphic,
+        .page-how-elderella-works .step-graphic-card {
+            box-shadow: none !important;
+        }
+        /* Visually clear the tinted backdrop around the caregivers image */
+        .page-how-elderella-works .step-image--clear {
+            background-color: #FFFFFF;
+            border-radius: 16px;
+        }
+        /* Card #2 background */
+        .page-how-elderella-works .feature-step--collects {
+            background-color: #EADCEF;
+        }
+        /* Card #2 cascade layout (desktop) */
+        @media (min-width: 1025px) {
+            .page-how-elderella-works .step-image-cascade {
+                display: grid;
+                grid-template-columns: 160px 160px;
+                grid-auto-rows: max-content;
+                column-gap: 8px;
+                row-gap: 8px;
+                width: 328px; /* 160 + 8 + 160 */
+                justify-content: end; /* align grid to the right */
+            }
+            .page-how-elderella-works .step-image-cascade .cascade-card { width: 160px; height: auto; }
+            .page-how-elderella-works .step-image-cascade .card-1 { grid-column: 1; grid-row: 1; }
+            .page-how-elderella-works .step-image-cascade .card-2 { grid-column: 2; grid-row: 2; }
+            .page-how-elderella-works .step-image-cascade .card-3 { grid-column: 1; grid-row: 3; }
+            .page-how-elderella-works .step-image-cascade .card-4 { grid-column: 2; grid-row: 4; }
+        }
+        /* Tablet/Mobile fallback: simple 2x2 grid with 8px gaps */
+        @media (max-width: 1024px) {
+            .page-how-elderella-works .step-image-cascade {
+                display: grid;
+                grid-template-columns: repeat(2, 160px);
+                column-gap: 8px;
+                row-gap: 8px;
+                justify-content: center;
+            }
+            .page-how-elderella-works .step-image-cascade .cascade-card { width: 160px; height: auto; }
+        }
+        /* Paragraph alignment on all steps */
+        .page-how-elderella-works .ella-partner-section .feature-step .step-text {
+            text-align: left;
+        }
+        /* Card layout + sizing (desktop) */
+        @media (min-width: 1025px) {
+            /* Fixed card size and a strict two-column grid so the
+               left column is always exactly 360px */
+            .page-how-elderella-works .ella-partner-section .feature-step {
+                width: 800px;
+                height: 600px;
+                margin: 0 auto 40px;
+                display: grid;
+                grid-template-columns: 360px 1fr;
+                column-gap: 32px;
+                align-items: center;
+                /* Reduce horizontal padding so content fits: 48px top/bottom, 40px sides */
+                padding: 48px 40px;
+            }
+            .page-how-elderella-works .ella-partner-section .feature-step .step-content {
+                width: 360px;
+                max-width: 360px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                margin: 0; /* grid handles placement */
+            }
+            .page-how-elderella-works .ella-partner-section .feature-step .step-text {
+                max-width: 300px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .page-how-elderella-works .ella-partner-section .feature-step .step-number {
+                display: flex;
+                justify-content: center;
+                margin-bottom: 24px;
+            }
+            .page-how-elderella-works .ella-partner-section .feature-step .step-image {
+                justify-self: end;
+            }
+            /* Typography sizing for step titles and body */
+            .page-how-elderella-works .ella-partner-section .step-headline {
+                font-size: 40px;
+                line-height: 1.4;
+            }
+            .page-how-elderella-works .ella-partner-section .step-text {
+                font-size: 20px;
+                line-height: 1.4;
+            }
+        }
+
+        /* Tablet typography (≤1024px) */
+        @media (max-width: 1024px) {
+            .page-how-elderella-works .ella-partner-section .step-headline {
+                font-size: 36px;
+                line-height: 1.4;
+            }
+            .page-how-elderella-works .ella-partner-section .step-text {
+                font-size: 20px;
+                line-height: 1.4;
+            }
+        }
+
+        /* Mobile typography (≤768px) */
+        @media (max-width: 768px) {
+            .page-how-elderella-works .ella-partner-section .step-headline {
+                font-size: 32px;
+                line-height: 1.4;
+            }
+            .page-how-elderella-works .ella-partner-section .step-text {
+                font-size: 20px;
+                line-height: 1.4;
+            }
+        }
+
+        /* Swap Learn more button position on smaller screens */
+        .page-how-elderella-works .btn-learn-more--mobile { display: none; }
+        @media (max-width: 1024px) {
+            .page-how-elderella-works .btn-learn-more--desktop { display: none; }
+            .page-how-elderella-works .btn-learn-more--mobile { display: inline-block; }
+        }
+
+        /* Card #4 specific image sizing */
+        .page-how-elderella-works .card4-caregivers { width: 301px !important; height: auto; }
+        .page-how-elderella-works .card4-cardiologist { width: 233px !important; height: auto; }
+
+        /* Card #4 right column wrapper (no .step-image) */
+        /* Not used after reverting to step-image stack; keeping sizing via classes */
+
+        /* Card #4 background + alignment */
+        .page-how-elderella-works .feature-step--shares { background-color: #EADCEF; }
+        @media (min-width: 1025px) {
+            .page-how-elderella-works .feature-step--shares .step-image { justify-self: center; align-items: center; gap: 24px; }
+        }
+        @media (max-width: 1024px) {
+            .page-how-elderella-works .feature-step--shares .step-image { align-items: center; gap: 16px; }
+        }
+    </style>
 </head>
-<body>
+<body class="page-how-elderella-works">
     <!-- Site Header Component -->
     <site-header></site-header>
 
@@ -34,7 +176,7 @@
             <h2 class="ella-partner-title">Ella, your caregiving partner</h2>
 
             <!-- Step 1: Add Ella to your care conversations -->
-            <div class="feature-step">
+            <div class="feature-step feature-step--add-ella">
                 <div class="step-content">
                     <div class="step-number">
                         <img
@@ -49,9 +191,9 @@
                     </div>
                     <h3 class="step-headline"><span class="step-headline-bold">Add Ella</span> to your care conversations</h3>
                     <p class="step-text">Add Ella as a contact and include her in your caregiving group chats. When you share updates about appointments, medications, or care tasks, Ella listens and learns.</p>
-                    <a href="#" class="btn-learn-more">Learn more</a>
+
                 </div>
-                <div class="step-image">
+                <div class="card4-right">
                     <img
                         src="images/ella-contact-card1.png"
                         srcset="images/ella-contact-card1.png 1x, images/ella-contact-card1@2x.png 2x"
@@ -62,11 +204,21 @@
                         loading="lazy"
                         decoding="async"
                     >
+                    <img
+                        src="images/ella-contact-card2.png"
+                        srcset="images/ella-contact-card2.png 1x, images/ella-contact-card2@2x.png 2x"
+                        width="306"
+                        height="91"
+                        alt="Message, Email, Share, and Add actions for contacting Ella"
+                        class="step-graphic"
+                        loading="lazy"
+                        decoding="async"
+                    >
                 </div>
             </div>
 
             <!-- Step 2: Elderella collects care details -->
-            <div class="feature-step">
+            <div class="feature-step feature-step--collects">
                 <div class="step-content">
                     <div class="step-number">
                         <img
@@ -81,16 +233,16 @@
                     </div>
                     <h3 class="step-headline">Elderella <span class="step-headline-bold">collects</span> care details</h3>
                     <p class="step-text">Ella automatically detects and organizes care information from your conversations. Medications, appointments, tasks, and care team members are captured without any extra effort.</p>
-                    <a href="collects-care-details.html" class="btn-learn-more">Learn more</a>
+                    <a href="collects-care-details.html" class="btn-learn-more btn-learn-more--desktop">Learn more</a>
                 </div>
-                <div class="step-image step-image-stack">
+                <div class="step-image step-image-cascade">
                     <img
                         src="images/care-team-detected.png"
                         srcset="images/care-team-detected.png 1x, images/care-team-detected@2x.png 2x"
                         width="174"
                         height="137"
                         alt="Care team detected notification"
-                        class="step-graphic-card"
+                        class="step-graphic-card cascade-card card-1"
                         loading="lazy"
                         decoding="async"
                     >
@@ -100,7 +252,7 @@
                         width="174"
                         height="131"
                         alt="Care task detected notification"
-                        class="step-graphic-card"
+                        class="step-graphic-card cascade-card card-2"
                         loading="lazy"
                         decoding="async"
                     >
@@ -110,15 +262,26 @@
                         width="174"
                         height="128"
                         alt="Care appointment detected notification"
-                        class="step-graphic-card"
+                        class="step-graphic-card cascade-card card-3"
+                        loading="lazy"
+                        decoding="async"
+                    >
+                    <img
+                        src="images/medication-detected.png"
+                        srcset="images/medication-detected.png 1x, images/medication-detected@2x.png 2x"
+                        width="174"
+                        height="101"
+                        alt="Medication detected notification"
+                        class="step-graphic-card cascade-card card-4"
                         loading="lazy"
                         decoding="async"
                     >
                 </div>
+                <a href="collects-care-details.html" class="btn-learn-more btn-learn-more--mobile">Learn more</a>
             </div>
 
             <!-- Step 3: Ella remembers and reminds -->
-            <div class="feature-step">
+            <div class="feature-step feature-step--shares">
                 <div class="step-content">
                     <div class="step-number">
                         <img
@@ -133,7 +296,7 @@
                     </div>
                     <h3 class="step-headline">Ella <span class="step-headline-bold">remembers and reminds</span></h3>
                     <p class="step-text">Ask Ella anything about your loved one's care. She remembers medications, appointments, and preferences so you don't have to. Get gentle reminders before important events.</p>
-                    <a href="remembers-and-reminds.html" class="btn-learn-more">Learn more</a>
+                    <a href="remembers-and-reminds.html" class="btn-learn-more btn-learn-more--desktop">Learn more</a>
                 </div>
                 <div class="step-image">
                     <img
@@ -147,6 +310,7 @@
                         decoding="async"
                     >
                 </div>
+                <a href="remembers-and-reminds.html" class="btn-learn-more btn-learn-more--mobile">Learn more</a>
             </div>
 
             <!-- Step 4: Elderella shares the load -->
@@ -165,16 +329,15 @@
                     </div>
                     <h3 class="step-headline">Elderella <span class="step-headline-bold">shares the load</span></h3>
                     <p class="step-text">Invite family, friends, and professionals to your care team. Everyone stays informed with the right level of access, and tasks can be delegated without endless phone calls.</p>
-                    <a href="shares-the-load.html" class="btn-learn-more">Learn more</a>
+                    <a href="shares-the-load.html" class="btn-learn-more btn-learn-more--desktop">Learn more</a>
                 </div>
                 <div class="step-image step-image-stack">
                     <img
-                        src="images/caregivers.png"
-                        srcset="images/caregivers.png 1x, images/caregivers@2x.png 2x"
-                        width="401"
-                        height="400"
+                        src="images/care-team-caregivers.png"
+                        srcset="images/care-team-caregivers.png 1x, images/care-team-caregivers@2x.png 2x"
+                        width="301"
                         alt="Care team members"
-                        class="step-graphic-card"
+                        class="step-graphic-card card4-caregivers"
                         loading="lazy"
                         decoding="async"
                     >
@@ -184,11 +347,12 @@
                         width="233"
                         height="184"
                         alt="Care team cardiologist card"
-                        class="step-graphic-card"
+                        class="step-graphic-card card4-cardiologist"
                         loading="lazy"
                         decoding="async"
                     >
                 </div>
+                <a href="shares-the-load.html" class="btn-learn-more btn-learn-more--mobile">Learn more</a>
             </div>
         </div>
     </section>
